// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cart component > renders Cart with one item 1`] = `
<DocumentFragment>
  <div
    class="_cart_65070e"
  >
    <div
      class="_subtitleWrapper_65070e"
    >
      <div
        class="_decor_65070e"
      />
      <h2
        class="_subtitle_65070e"
      >
        Cart
      </h2>
    </div>
    <div
      data-testid="mock-cart-item"
    >
      Mock Cart Item
    </div>
    <div
      class="_actionGroup_65070e"
    >
      <a
        class="_linkShop_65070e"
        data-discover="true"
        href="/shop"
      >
        Return To Shop
      </a>
      <button
        class="_btnClear_65070e"
        type="button"
      >
        Clear Cart
      </button>
    </div>
    <div
      class="_cartSummary_65070e"
    >
      <form
        class="_inputWrapper_65070e"
      >
        <label
          class="_visuallyHidden_65070e"
          for="coupon"
        >
          Coupon code
        </label>
        <input
          class="_coupon_65070e"
          id="coupon"
          name="coupon"
          type="text"
        />
        <button
          class="_btnCoupon_65070e"
          disabled=""
          type="submit"
        >
          Apply Coupon
        </button>
      </form>
      <div
        class="_cartTotal_65070e"
      >
        <h3
          class="_subheading_65070e"
        >
          Cart Total
        </h3>
        <ul
          class="_totalList_65070e"
        >
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Subtotal
            </span>
            <span
              class="_value_65070e"
            >
              $49.99
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Savings
            </span>
            <span
              class="_value_65070e"
            >
              $0.00
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Shipping
            </span>
            <span
              class="_value_65070e"
            >
              Free
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Tax
            </span>
            <span
              class="_value_65070e"
            >
              TBD
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Estimated Total
            </span>
            <span
              class="_value_65070e _estTotal_65070e"
            >
              $49.99
            </span>
          </li>
        </ul>
        <p
          class="_linkCheckout_65070e"
        >
          Proceed To Checkout
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cart component > renders empty Cart with text your bag is currently empty 1`] = `
<DocumentFragment>
  <div
    class="_cart_65070e"
  >
    <div
      class="_subtitleWrapper_65070e"
    >
      <div
        class="_decor_65070e"
      />
      <h2
        class="_subtitle_65070e"
      >
        Cart
      </h2>
    </div>
    <p
      class="_emptyBag_65070e"
    >
      Your bag is currently empty.
    </p>
    <div
      class="_actionGroup_65070e"
    >
      <a
        class="_linkShop_65070e"
        data-discover="true"
        href="/shop"
      >
        Return To Shop
      </a>
      <button
        class="_btnClear_65070e"
        type="button"
      >
        Clear Cart
      </button>
    </div>
    <div
      class="_cartSummary_65070e"
    >
      <form
        class="_inputWrapper_65070e"
      >
        <label
          class="_visuallyHidden_65070e"
          for="coupon"
        >
          Coupon code
        </label>
        <input
          class="_coupon_65070e"
          id="coupon"
          name="coupon"
          type="text"
        />
        <button
          class="_btnCoupon_65070e"
          disabled=""
          type="submit"
        >
          Apply Coupon
        </button>
      </form>
      <div
        class="_cartTotal_65070e"
      >
        <h3
          class="_subheading_65070e"
        >
          Cart Total
        </h3>
        <ul
          class="_totalList_65070e"
        >
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Subtotal
            </span>
            <span
              class="_value_65070e"
            >
              $0.00
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Savings
            </span>
            <span
              class="_value_65070e"
            >
              $0.00
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Shipping
            </span>
            <span
              class="_value_65070e"
            >
              Free
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Tax
            </span>
            <span
              class="_value_65070e"
            >
              TBD
            </span>
          </li>
          <li
            class="_totalItem_65070e"
          >
            <span
              class="_label_65070e"
            >
              Estimated Total
            </span>
            <span
              class="_value_65070e _estTotal_65070e"
            >
              $0.00
            </span>
          </li>
        </ul>
        <p
          class="_linkCheckout_65070e"
        >
          Proceed To Checkout
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
